# hyprnavi-psm

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  edge.rs  handlers.rs  main.rs  plugin.rs  workspace.rs
