[package]
name = "hyprnavi-psm"
version = "0.3.0"
edition = "2021"
description = "Smart navigation tool for Hyprland with edge-detection"
license = "MIT"

[[bin]]
name = "hyprnavi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
